# tcglog_parser

./: Cargo.toml  README.md
src/: error.rs  event.rs  lib.rs  parser.rs  pcr.rs  types.rs  warning.rs
src/event_data/: device_path.rs  mod.rs  wbcl.rs
