[package]
name = "tcglog_parser"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A Rust library for parsing TCG TPM event logs (TCG 1.2 and TCG 2.0 crypto-agile formats) with JSON serialization support"
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha1 = "0.10"
sha2 = "0.11"
thiserror = "2"

[dev-dependencies]
serde_json = "1"
